objects/Provisioning__c.object
<CustomObject>
    <fields>
        <fullName>Line_3_Simultaneous_Order__c</fullName>
        <label>Line 3 - Simultaneous Order</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_4_Simultaneous_Order_Reference__c</fullName>
        <label>Line 4 - Simultaneous Order Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_within_1_metre_of_leased_line__c</fullName>
        <label>Line within 1 metre of leased line?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MAC_Code__c</fullName>
        <label>MAC Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Category__c</fullName>
        <label>Maintenance Category</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Single Mode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multimode</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_provide_or_Existing_connections__c</fullName>
        <label>New provide or Existing connections?</label>
        <picklist>
            <picklistValues>
                <fullName>New Provide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Connections</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Line_Box_Terminations__c</fullName>
        <label>Number of Line Box Terminations</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Lines_to_Bond__c</fullName>
        <label>Number of Lines to Bond</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_PBX_Terminations__c</fullName>
        <label>Number of PBX Terminations</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_contact_able_to_sign_Hazard_sheet__c</fullName>
        <label>Onsite contact able to sign Hazard sheet</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reference__c</fullName>
        <label>Opportunity Reference</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Placed_with_Supplier__c</fullName>
        <label>Order Placed with Supplier</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Received_Date__c</fullName>
        <label>Order Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_CDD__c</fullName>
        <label>Original CDD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overuse_Method__c</fullName>
        <label>Overuse Method</label>
        <picklist>
            <picklistValues>
                <fullName>PAYG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top-Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overuse_Option__c</fullName>
        <label>Overuse Option</label>
        <picklist>
            <picklistValues>
                <fullName>Topup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAYG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAYG_Limit__c</fullName>
        <label>PAYG Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAYG_Value__c</fullName>
        <label>PAYG Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSTN_Backup_Line_Number__c</fullName>
        <label>PSTN Backup Line Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PSTN_Line_Number_for_FTTC_Installation__c</fullName>
        <label>PSTN Line Number for FTTC Installation</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PSTN_Line_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSTN Line Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSTN_Line_onsite_for_backup__c</fullName>
        <label>PSTN Line onsite for backup?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSTN_Quantity_Required__c</fullName>
        <label>PSTN Quantity Required</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSTN_Required__c</fullName>
        <label>PSTN Required</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSTN_Simultaneous_Order_Reference__c</fullName>
        <label>PSTN &amp; Simultaneous Order Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSTN_Simultaneous_Order__c</fullName>
        <label>PSTN &amp; Simultaneous Order</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSTN_s_Required__c</fullName>
        <label>PSTN(s) Required?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>B End Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Bonded_Password__c</fullName>
        <label>Preferred Bonded Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Bonded_Username__c</fullName>
        <label>Preferred Bonded Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Password__c</fullName>
        <label>Preferred Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Username__c</fullName>
        <label>Preferred Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premises_Name__c</fullName>
        <label>B End Premises Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Number_Required__c</fullName>
        <label>Presentation Number Required</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Presentation_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presentation Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Provisioning</relationshipLabel>
        <relationshipName>Provisioning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provision_Type__c</fullName>
        <label>Provision Type</label>
        <picklist>
            <picklistValues>
                <fullName>Line Move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provisioning_Cona__c</fullName>
        <label>Provisioning Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Chris Paxon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natalie Lewis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephen Kerr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provisioning_Email_Address__c</fullName>
        <label>Provisioning Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provisioning_Telephone_Number__c</fullName>
        <label>Provisioning Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provisioning_Updates__c</fullName>
        <label>Provisioning Updates</label>
        <picklist>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rackmount_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rackmount Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranges_advertised_to_Entanet__c</fullName>
        <label>Ranges advertised to Entanet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Raw_Call_Data__c</fullName>
        <label>Raw Call Data</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Fee__c</fullName>
        <label>Recurring Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Perios__c</fullName>
        <label>Recurring Period</label>
        <picklist>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Redcare_Installation__c</fullName>
        <label>Redcare Installation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reminder_Call__c</fullName>
        <label>Reminder Call</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ring_Back_Inhibit__c</fullName>
        <label>Ring Back Inhibit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ringback_Voice_Prompt__c</fullName>
        <label>Ringback (Voice Prompt)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Room_Reference__c</fullName>
        <label>B End Room Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Admin_Contact__c</fullName>
        <label>Sales Admin Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Karen Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura Rowley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarah Thornbury</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Hidden__c</fullName>
        <label>Sales Contact Hidden</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact__c</fullName>
        <label>Sales Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Kevin Mcdonnell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neal Wright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Thomas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rod Lawrence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Alternative_Date__c</fullName>
        <label>Second Alternative Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Simultaneous_Order_Reference__c</fullName>
        <label>Simultaneous Order Reference</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simultaneous_Order__c</fullName>
        <label>Simultaneous Order</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Single_ADSL_Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Business 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family 60</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stability_Option__c</fullName>
        <label>Stability Option</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Stable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Road__c</fullName>
        <label>B End Street/Road</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Delivered__c</fullName>
        <label>Supplier Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Next_Update__c</fullName>
        <label>Supplier Next Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Supplier_Provisioning_Contact__c</fullName>
        <label>Supplier Provisioning Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supplier_Reference__c</fullName>
        <label>Supplier Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>BT Openreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talk Talk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Email__c</fullName>
        <label>Technical Contact Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Name__c</fullName>
        <label>Technical Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Tel__c</fullName>
        <label>Technical Contact Tel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_No_for_Transfer__c</fullName>
        <label>Telephone No for Transfer</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Termination_Type_for_Business_Line__c</fullName>
        <label>Termination Type for Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>Line Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTTP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination__c</fullName>
        <label>Termination Room Ready?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Alternative_Date__c</fullName>
        <label>Third Alternative Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Three_Way_Calling__c</fullName>
        <label>Three Way Calling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>B End Town</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traffic_Weighting__c</fullName>
        <label>Traffic Weighting</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transit_Service_Required__c</fullName>
        <label>Transit Service Required</label>
        <picklist>
            <picklistValues>
                <fullName>Full Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Transit (UK Routes Only)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upstream_Speed__c</fullName>
        <label>Upstream Speed</label>
        <picklist>
            <picklistValues>
                <fullName>Up to 448Kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncapped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annex M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_will_access_be_available__c</fullName>
        <label>When will access be available?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Withold_Number__c</fullName>
        <label>Withold Number</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Withold_Number_allow_override__c</fullName>
        <label>Withold Number (allow override)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Provisioning</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Provisioning Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ADSL_Backup_Reference</fullName>
        <active>true</active>
        <description>If ADSL Backup is ticked then ADSL ref needs to be filled</description>
        <errorConditionFormula>AND(
Backup_Required__c = TRUE,
ISBLANK( Backup_Reference__c)
)</errorConditionFormula>
        <errorDisplayField>Backup_Reference__c</errorDisplayField>
        <errorMessage>ADSL Backup reference must be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Occupy_the_premises</fullName>
        <active>true</active>
        <description>If occupy option is selected to Waiting to move in - Date field is mandatory</description>
        <errorConditionFormula>AND(
ISPICKVAL (Do_you_currently_occupy_the_premises__c,&quot;Waiting to Move In&quot;),
ISBLANK(When_will_access_be_available__c)
)</errorConditionFormula>
        <errorDisplayField>When_will_access_be_available__c</errorDisplayField>
        <errorMessage>Must advise what date access will be available from</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Property_owned_or_leased</fullName>
        <active>true</active>
        <description>Confirm that landlord permission has been given</description>
        <errorConditionFormula>AND(
ISPICKVAL(Is_this_property_owned_or_leased_by_you__c,&quot;Leased&quot;),
ISPICKVAL(Landlord_Consent_given__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Landlord_Consent_given__c</errorDisplayField>
        <errorMessage>Landlord consent status must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Third_Party_Data_Centre</fullName>
        <active>true</active>
        <description>Ensure cab location is specified if order is to data centre</description>
        <errorConditionFormula>AND(
ISPICKVAL(Is_this_a_3rd_party_data_centre__c,&quot;Yes&quot;),
ISBLANK(Data_Centre_Cab_Location__c)
)</errorConditionFormula>
        <errorDisplayField>Data_Centre_Cab_Location__c</errorDisplayField>
        <errorMessage>Connection is being installed to 3rd party data centre, cab location needs to be specified.</errorMessage>
    </validationRules>
</CustomObject>